2012-02-01  Shawn Singh  <shawnsingh@chromium.org>

        Fix the semantics of passing contentsVisible flag to GraphicsLayers
        https://bugs.webkit.org/show_bug.cgi?id=76975

        Reviewed by Simon Fraser.

        This patch is covered by existing tests, in particular
        compositing/visibility/layer-visible-content.html; its
        expectations are rebaselined.

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):

2012-02-01  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, another GTK build fix after r106446.

        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        Restore webKitWebSrcGetProtocols as it was before r106446.

2012-02-01  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, GTK build fix after r106446.

        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:

2012-02-01  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r106432.
        http://trac.webkit.org/changeset/106432
        https://bugs.webkit.org/show_bug.cgi?id=77529

        it breaks tests (Requested by shinyak on #webkit).

        * dom/Element.cpp:
        (WebCore::Element::attach):
        * dom/ShadowRoot.cpp:
        (WebCore::ShadowRoot::recalcShadowTreeStyle):
        * dom/ShadowRoot.h:
        (ShadowRoot):
        * html/shadow/HTMLContentElement.cpp:
        (WebCore::HTMLContentElement::attach):
        (WebCore::HTMLContentElement::detach):

2012-02-01  Hayato Ito  <hayato@chromium.org>

        Remove unnecessary [OldStyleObjC] from ShadowRoot.idl.
        https://bugs.webkit.org/show_bug.cgi?id=77516

        Reviewed by Kentaro Hara.

        No new tests. No change in behavior.

        * dom/ShadowRoot.idl:

2012-01-26  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] 0.11 webkitwebsrc
        https://bugs.webkit.org/show_bug.cgi?id=77086

        Port the webkitwebsrc element to GStreamer 0.11 APIs.
