@@ -1,3 +1,14 @@
+2012-01-31  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Web Inspector: Scripts navigator becomes empty after "show folders" settings change.
+        https://bugs.webkit.org/show_bug.cgi?id=77441
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/ScriptsNavigator.js:
+        (WebInspector.ScriptsNavigator.prototype._reset):
+        * inspector/front-end/utilities.js:
+
 2012-02-01  Shawn Singh  <shawnsingh@chromium.org>
 
         Fix the semantics of passing contentsVisible flag to GraphicsLayers
